profiling-using-exp-runner/backup_FINAL_RESULTS/permutation_experiment/run_5_repetition_0/energibridge.log
sampling interval: 200, target function: generate_permutations_lru_cache, input size: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.permutation as module; input_tuple = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10); module.generate_permutations_lru_cache(input_tuple); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 8.215097457885742 for 0.2393041 sec of execution.
